recommended videos now correct wrap

--- a/src/SidebarRow.css
+++ b/src/SidebarRow.css
@@ -1,4 +1,57 @@
 .sidebarRow {
     display: flex; 
     align-items: center;
+    padding: 10px 20px;
+}
+
+.sidebarRow__icon {
+    color: #606060;
+    font-size: large !important;
+}
+
+.sidebarRow__title {
+    flex: 1; /* consume almost every space here */
+    margin-left: 20px;
+    font-size: 12px;
+    font-weight: 500;;
+}
+
+/* what to do when hovering an sidebar item */
+.sidebarRow:hover { 
+    background-color: lightgray;
+    cursor: pointer;
+}
+
+/* when hovering a sidebare row, go to the icon ONLY and color it red */
+.sidebarRow:hover > .sidebarRow__icon {
+    color: red;
+}
+
+/* when hovering a sidebare row, go to the title and make it bold */
+.sidebarRow:hover > .sidebarRow__title {
+    font-weight: bold;
+}
+
+/* what to do when selected */
+.sidebarRow.selected {
+    background-color: lightgray;
+}
+
+/* what to do when selected */
+.sidebarRow.selected > .sidebarRow__icon {
+    color: red;
+}
+/* what to do when selected */
+.sidebarRow.selected > .sidebarRow__title {
+    font-weight: bold;
+}
+
+/* style the hr */
+
+.sidebarRow > hr {
+    height: 1px;
+    border: 0;
+    background-color: lightgray;
+    margin-top: 10px;
+    margin-botton: 10px;
 }
